Cant delete yourself, roles shown in 'users'

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -27,6 +27,7 @@
                 <th>ID</th>
                 <th>Användarnamn</th>
                 <th>Email</th>
+                <th>Roller</th>
             </tr>
             </thead>
             <tbody>
@@ -35,8 +36,12 @@
                 <td th:text="${user.username}">Username</td>
                 <td th:text="${user.email}">Email</td>
                 <td>
+                    <ul>
+                        <li th:each="role : ${user.roles}" th:text="${role.role}"></li>
+                    </ul>
+                </td>
+                <td>
                     <a th:href="@{/admin/users/edit/{id}(id=${user.id})}">Ändra</a>
-<!--                    <a th:href="@{/admin/deleteUser/{id}(id=${user.id})}" onclick="return confirm('Är du säker på att du vill ta bort användare?')">Ta bort</a>-->
                     <form th:action="@{/admin/deleteUser/{id}(id=${user.id})}" method="post" style="display:inline;">
                         <button type="submit" onclick="return confirm('Är du säker på att du vill ta bort användaren?')">Delete</button>
                     </form>
