--- a/src/main/resources/templates/admin/updateUserDone.html
+++ b/src/main/resources/templates/admin/updateUserDone.html
@@ -2,25 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Kund togs bort</title>
+    <title>Ändringarna har sparats</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <nav class="navbar">
-        <button class="navButton"><a th:href="@{/index}" >Home</a></button>
+        <button class="navButton"><a th:href="@{/index}">Home</a></button>
     </nav>
     <div>
-        <form action="#" th:action="@{/admin/users}" method="post">
-
+        <form th:action="@{/admin/users}" method="get">
             <h2>Ändringarna har sparats!</h2>
             <input class="book-button mt-10" type="submit" value="Ok">
         </form>
     </div>
-
 </div>
 </body>
 </html>
