--- a/src/main/resources/templates/allRooms.html
+++ b/src/main/resources/templates/allRooms.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
+  <title>Alla rum</title>
   <meta charset="UTF-8">
-  <title>All Rooms</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <style>
+    .container {
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+    }
+
+    .room-table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .room-table th,
+    .room-table td {
+      padding: 10px;
+    }
+
+    .room-event-link {
+      text-decoration: none;
+      color: #333;
+      display: inline-block;
+    }
+
+    .room-label {
+      font-weight: bold;
+    }
+
+    .room-number {
+      color: #00f;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
   <nav class="navbar">
     <button class="navButton"><a th:href="@{/index}" >Home</a> </button>
   </nav>
-  <table>
+  <h1>Alla rum</h1>
+  <table class="room-table">
     <thead>
-    <tr>
-      <h2>Rum events</h2>
-    </tr>
     </thead>
     <tbody>
-    <tr th:each="room : ${allRum}">
+    <tr th:each="room : ${rooms}">
       <td>
-        <a th:href="@{'/rum/' + ${room.id} + '/events'}" class="roomButton">
-          <span th:text="'Room ' + ${room.rumsnr}"></span>
+        <a class="room-event-link" th:href="@{'/rum/' + ${room.id} + '/events'}">
+          <span class="room-label">Rum: </span>
+          <span class="room-number" th:text="${room.rumsnr}"></span>
         </a>
       </td>
     </tr>
