--- a/src/main/resources/templates/visaSoktaKunder.html
+++ b/src/main/resources/templates/visaSoktaKunder.html
@@ -73,6 +73,17 @@
             border-radius: 5px;
             border: 1px solid #ccc;
         }
+        a{
+            text-decoration: none;
+            color: black;
+            cursor: pointer;
+        }
+        a:visited{
+            color: black;
+        }
+        a span{
+            color: black;
+        }
     </style>
 </head>
 <body>
