now shows total booking price in confirmation mail

--- a/src/main/resources/templates/htmlConfirmationMailTemplate.html
+++ b/src/main/resources/templates/htmlConfirmationMailTemplate.html
@@ -29,7 +29,7 @@
     <p>Från: <span th:text="${startDate}"></span></p>
     <p>Till: <span th:text="${endDate}"></span></p>
     <p>Sängplatser: <span th:text="${numOfBeds}"></span></p>
-    <p>Pris: <span th:text="${price}"></span> kr</p>
+    <p>Pris: <span th:text="${totalPrice}"></span> kr</p>
     <hr class="divider">
     <h2>Gäst information</h2>
     <hr class="divider">
