Button now sends user to page html-page with 'confirmationMailTemplate.html' as inner html file

--- a/src/main/resources/static/style2.css
+++ b/src/main/resources/static/style2.css
@@ -476,3 +476,8 @@ form button[type="submit"]:hover {
     -ms-user-select: none;
     user-select: none;
 }
+
+#rowContainer{
+    display:flex;
+    flex-direction:row;
+}
