crud functionality completed for admins

--- a/src/main/resources/templates/admin/edituser.html
+++ b/src/main/resources/templates/admin/edituser.html
@@ -26,10 +26,10 @@
             <input type="text" id="username" name="username" th:field="*{username}" ><br>
 
             <label for="email">E-post:</label>
-            <input type="email" id="email" name="email" th:field="*{email}"><br>
+            <input readonly type="email" id="email" name="email" th:field="*{email}"><br>
 
             <label for="password">Lösenord: </label>
-            <input readonly type="password" id="password" name="password" th:field="*{password}">
+            <input type="password" id="password" name="password" th:field="*{password}">
             <input type="hidden" id="id" name="id" th:field="*{id}">
             <p class="error" th:name="felmeddelande" th:text="${felmeddelande}"></p>
 
