--- a/src/main/resources/templates/admin/editMailTemplate.html
+++ b/src/main/resources/templates/admin/editMailTemplate.html
@@ -16,38 +16,52 @@
             padding: 0;
             background-color: #f9f9f9;
         }
+
+        .loggningInfo {
+            color: white;
+            font-size: 0.7em;
+            margin-left: auto;
+        }
     </style>
 </head>
 <body>
+<div class="bigContainer">
+    <nav class="navbar">
+        <button class="navButton2"><a th:href="@{/index}">Home</a></button>
+        <span class="loggningInfo"> Inloggad som: <span th:text="${#authentication.principal.username}"></span></span>
+    </nav>
+    <h2>Ändra bokningsbekräftele-mail</h2>
+    <div id="rowContainer">
+        <div class="checkbox-form2">
+            <input type="checkbox" id="roomNumber" value="ROOMNUMBER">
+            <label for="roomNumber">Rumsnummer</label><br>
+            <input type="checkbox" id="dates" value="DATES">
+            <label for="dates">Datum</label><br>
+            <input type="checkbox" id="numOfBeds" value="NUMOFBEDS">
+            <label for="numOfBeds">Sängplatser</label><br>
+            <input type="checkbox" id="price" value="PRICE">
+            <label for="price">Total kostnad</label>
+            <hr>
+            <input type="checkbox" id="name" value="NAME">
+            <label for="name">Namn</label><br>
+            <input type="checkbox" id="phoneNumber" value="PHONENUMBER">
+            <label for="phoneNumber">Telefonnummer</label><br>
+            <input type="checkbox" id="email" value="EMAIL">
+            <label for="email">Email</label><br>
+            <br>
+            <button class="bigButton" type="submit">Spara/Granska</button>
 
-<p>Here is the inner htmlMailTemplate-file:</p>
-<div id="rowContainer">
-    <div class="checkbox-form2">
-        <input type="checkbox" id="roomNumber" value="ROOMNUMBER">
-        <label for="roomNumber">Rumsnummer</label><br>
-        <input type="checkbox" id="dates" value="DATES">
-        <label for="dates">Datum</label><br>
-        <input type="checkbox" id="numOfBeds" value="NUMOFBEDS">
-        <label for="numOfBeds">Sängplatser</label><br>
-        <input type="checkbox" id="price" value="PRICE">
-        <label for="price">Total kostnad</label><hr>
-        <input type="checkbox" id="name" value="NAME">
-        <label for="name">Namn</label><br>
-        <input type="checkbox" id="phoneNumber" value="PHONENUMBER">
-        <label for="phoneNumber">Telefonnummer</label><br>
-        <input type="checkbox" id="email" value="EMAIL">
-        <label for="email">Email</label><br>
 
+        </div>
 
-    </div>
-
-    <div th:replace="admin/htmlConfirmationMailTemplate"
-         th:with="name=${name}, phoneNumber=${phoneNumber},
+        <div th:replace="admin/htmlConfirmationMailTemplate"
+             th:with="name=${name}, phoneNumber=${phoneNumber},
      email=${email}, roomNumber=${roomNumber},
      startDate=${startDate}, endDate=${endDate},
      numOfBeds=${numOfBeds}, totalPrice=${totalPrice}"></div>
 
 
+    </div>
 </div>
 </body>
 </html>
