--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -75,7 +75,7 @@
                 <input type="checkbox" name="roles" id="receptionist" value="RECEPTIONIST">
                 <label for="receptionist">Receptionist </label>
             </div>
-            <button class="navButton" type="submit">Lägg till användare</button>
+            <button type="submit">Lägg till användare</button>
         </form>
     </div>
 </div>
